fix namespace conflict around #screen div on mobile and integrated

--- a/tests/integrated/style.css
+++ b/tests/integrated/style.css
@@ -99,7 +99,7 @@ body {
   position:relative;
   }
 
-#screen {
+#cogs-screen {
   position:relative;
   width:100%;
   overflow:hidden;
